[project]
name = "bones-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.6.4",
    "structlog>=25.4.0",
]

[project.scripts]
bones-repro = "bones_repro:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.6",
]
